--- a/styles/style.css
+++ b/styles/style.css
@@ -119,15 +119,15 @@
 .staff__title {
   font-size: 44px;
   line-height: 52px;
-  margin: 0 0 40px;
-  font-weight: 500;
+  margin-bottom: 24px;
+  font-weight: 600;
   color: #ffffff;
 }
 
 .staff__subtitle {
   font-size: 20px;
   line-height: 30px;
-  margin: 0 0 68px;
+  margin: 0 auto 56px;
   font-weight: 300;
   color: #ffffff;
 }
@@ -138,26 +138,27 @@
   width: 360px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 24px;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
+  border-radius: 10px;
 }
 
 .card__title {
-  font-size: 24px;
+  font-size: 20px;
   text-align: left;
   display: flex;
   flex-direction: column;
-  line-height: 32px;
-  margin: 0 0 12px;
+  line-height: 28px;
+  margin: 0 0 8px;
 }
 
 .card__text {
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  margin: 0 0 16px;
+  margin-top: 0px;
+  margin-bottom: 12px;
   display: -webkit-box;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
@@ -166,6 +167,7 @@
 }
 
 .card__content {
+  height: 100%;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -174,8 +176,8 @@
 
 .card__footer {
   text-align: left;
-  margin-top: auto;
+  margin: 0 0 0 0;
   color: #838383;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
 }
