--- a/styles/style.css
+++ b/styles/style.css
@@ -119,15 +119,17 @@
 .staff__title {
   font-size: 44px;
   line-height: 52px;
-  margin-bottom: 24px;
-  font-weight: 600;
+  margin-top: 32px;
+  margin-right: 0;
+  margin-left: 0;
+  font-weight: 500;
   color: #ffffff;
 }
 
 .staff__subtitle {
   font-size: 20px;
   line-height: 30px;
-  margin: 0 auto 56px;
+  margin: 0 auto 32px;
   font-weight: 300;
   color: #ffffff;
 }
@@ -141,7 +143,7 @@
   padding: 24px;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .card__title {
@@ -149,7 +151,7 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  line-height: 28px;
+  line-height: 36px;
   margin: 0 0 8px;
 }
 
@@ -157,8 +159,10 @@
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  margin-top: 0px;
-  margin-bottom: 12px;
+  margin-top: 8px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
   display: -webkit-box;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
@@ -176,7 +180,7 @@
 
 .card__footer {
   text-align: left;
-  margin: 0 0 0 0;
+  margin-top: auto;
   color: #838383;
   font-size: 14px;
   line-height: 20px;
