--- a/styles/style.css
+++ b/styles/style.css
@@ -119,17 +119,17 @@
 .staff__title {
   font-size: 44px;
   line-height: 52px;
-  margin-top: 32px;
-  margin-right: 0;
-  margin-left: 0;
-  font-weight: 500;
+  margin-top: 68px;
+  margin-right: 40px;
+  margin-left: 40px;
+  font-weight: 700;
   color: #ffffff;
 }
 
 .staff__subtitle {
   font-size: 20px;
   line-height: 30px;
-  margin: 0 auto 32px;
+  margin: 0 40px 40px;
   font-weight: 300;
   color: #ffffff;
 }
@@ -143,7 +143,7 @@
   padding: 24px;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 20px;
+  border-radius: 30px;
 }
 
 .card__title {
@@ -151,7 +151,7 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  line-height: 36px;
+  line-height: 32px;
   margin: 0 0 8px;
 }
 
@@ -159,10 +159,10 @@
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  margin-top: 8px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: auto;
   display: -webkit-box;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
