--- a/styles/style.css
+++ b/styles/style.css
@@ -119,9 +119,7 @@
 .staff__title {
   font-size: 44px;
   line-height: 52px;
-  margin-top: 68px;
-  margin-right: 40px;
-  margin-left: 40px;
+  margin: 60px 0 0;
   font-weight: 700;
   color: #ffffff;
 }
@@ -129,7 +127,7 @@
 .staff__subtitle {
   font-size: 20px;
   line-height: 30px;
-  margin: 0 40px 40px;
+  margin: 20px 0 0;
   font-weight: 300;
   color: #ffffff;
 }
@@ -140,10 +138,10 @@
   width: 360px;
   display: flex;
   flex-direction: column;
-  padding: 24px;
+  padding: 20px;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
+  border-radius: 20px;
 }
 
 .card__title {
@@ -151,18 +149,15 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  line-height: 32px;
-  margin: 0 0 8px;
+  line-height: 28px;
+  margin: 0 0 12px;
 }
 
 .card__text {
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: auto;
+  margin: 0 0 16px;
   display: -webkit-box;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
