--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@
 .staff__subtitle {
   font-size: 20px;
   line-height: 30px;
-  margin: 40px 0 0 0;
+  margin: 68px;
   font-weight: 300;
   color: #ffffff;
 }
@@ -175,7 +175,7 @@
 
 .card__footer {
   text-align: left;
-  margin-top: auto;
+  margin-top: auto 0 0;
   color: #838383;
   font-size: 14px;
   line-height: 20px;
