--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@
 
 .card__footer {
   text-align: left;
-  margin-top: auto 0 0;
+  margin-top: auto 0;
   color: #838383;
   font-size: 14px;
   line-height: 20px;
