--- a/styles/style.css
+++ b/styles/style.css
@@ -117,18 +117,20 @@
 }
 
 .staff__title {
+  text-align: center;
   font-size: 44px;
   line-height: 52px;
-  margin: auto;
-  font-weight: 500;
+  font-weight: 400;
+  margin: 0 0 24px;
   color: #ffffff;
 }
 
 .staff__subtitle {
+  text-align: center;
   font-size: 20px;
   line-height: 30px;
-  margin: 68px;
-  font-weight: 300;
+  font-weight: 400;
+  margin: 0;
   color: #ffffff;
 }
 
@@ -138,10 +140,10 @@
   width: 360px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 32px 40px 20px 32px;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
+  border-radius: 6px;
 }
 
 .card__title {
@@ -149,15 +151,16 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  line-height: 32px;
-  margin: 0 0 12px 0;
+  line-height: 30px;
+  margin: 0;
+  font-weight: 700;
 }
 
 .card__text {
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  margin: auto;
+  margin: 20px 0 0;
   display: -webkit-box;
   -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
@@ -174,9 +177,9 @@
 }
 
 .card__footer {
-  text-align: left;
-  margin-top: auto;
-  color: #838383;
+  margin: 0;
   font-size: 14px;
   line-height: 20px;
+  color: #838383;
+  margin-top: auto;
 }
