--- a/styles/style.css
+++ b/styles/style.css
@@ -148,10 +148,15 @@
 }
 
 .card__text {
-  display: contents;
-  margin: 20px 0 0;
+  display: block;
+  margin: 20px 0 0 0;
   font-size: 16px;
   line-height: 24px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 9;
+  -webkit-box-orient: vertical;
 }
 
 .card__footer {
